Home-Child-Kanban/force-app/main/default/objects/Kanban_Configuration__c/fields/Exclude_From_Group_By__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Group_By__c</fullName>
    <label>Exclude From Group By</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>