Home-Child-Kanban/force-app/main/default/objects/Kanban_Configuration__c/fields/Fields_To_Show__c.field-meta.xml
<CustomField>
    <fullName>Fields_To_Show__c</fullName>
    <label>Fields To Show</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>