Home-Child-Kanban/force-app/main/default/objects/Kanban_Configuration__c/fields/For_Object__c.field-meta.xml
<CustomField>
    <fullName>For_Object__c</fullName>
    <label>For Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>