Home-Child-Kanban/force-app/main/default/objects/Kanban_Configuration__c/fields/Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Name_Field__c</fullName>
    <label>Name Field(Do Not Edit)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>