Home-Child-Kanban/force-app/main/default/objects/Kanban_Configuration__c/fields/Relation_Field__c.field-meta.xml
<CustomField>
    <fullName>Relation_Field__c</fullName>
    <label>Relation Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>