Home-Child-Kanban/force-app/main/default/objects/Kanban_Configuration__c/fields/Summarize_By__c.field-meta.xml
<CustomField>
    <fullName>Summarize_By__c</fullName>
    <label>Summarize By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>