Home-Child-Kanban/force-app/main/default/objects/Kanban_Configuration__c/fields/Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Where_Clause__c</fullName>
    <label>Where Clause</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>